testsuite/tests/rename/should_fail/T21605a.hs
module T21605a where

import Prelude

wrongSig :: Prelude.true
wrongSig = undefined
